ch6-kubernetes/services/nginx-v2-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-version-two
  labels:
    run: nginx-version-two
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-version-two
