ch6-kubernetes/services/flask-basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
spec:
  ingressClassName: "nginx"
  defaultBackend:
    service:
      name: flask-app
      port:
        number: 5000
